--- a/Handmade_fragrance/Web.config
+++ b/Handmade_fragrance/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Handmade_fragrance-20201101012146.mdf;Initial Catalog=aspnet-Handmade_fragrance-20201101012146;Integrated Security=True"
+    <add name="Handmade_fragrance" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Handmade_fragrance.mdf;Initial Catalog=Handmade_fragranceDB;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
